# Lab0

./: .gitignore  LAB_REPORT.md  README.md  TESTING_REPORT.md  pyproject.toml  requirements.txt
src/: __init__.py  cli.py  preprocessing.py
tests/: test_cli.py  test_preprocessing.py
