[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lab0-ci-fundamentals"
version = "0.1.0"
description = "Continuous Integration fundamentals with data preprocessing functions"
authors = [
    {name = "Wassim", email = "wassimbou02@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "pylint>=3.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
lab0 = "src.cli:cli"

[tool.black]
line-length = 100

[tool.pylint.messages_control]
disable = ["missing-docstring"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pylint>=3.3.9",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
